added googlefont, favicon

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Poppins&display=swap');
+
 body {
-  background: red;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
