--- a/css/styles.css
+++ b/css/styles.css
@@ -363,3 +363,39 @@ a {
   }
 }
 /************************* end of gallery **************************/
+/************************* deals **************************/
+.input-group {
+  width: 80vw;
+  max-width: 600px;
+  margin: 0 auto;
+  display: flex;
+}
+.form-control {
+  flex: 1 1 auto;
+}
+.form-control,
+.btn-submit {
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-weight: 300;
+  letter-spacing: var(--mainSpacing);
+  background: transparent;
+  text-transform: uppercase;
+  outline: none;
+  border: 2px solid var(--primaryColor);
+}
+::placeholder {
+  font-family: 'Lato', sans-serif;
+  color: var(--mainBlack);
+}
+.btn-submit {
+  border-left: none;
+  cursor: pointer;
+  transition: var(--mainTransition);
+}
+.btn-submit:hover {
+  background: var(--primaryColor);
+  color: var(--mainWhite);
+}
+/************************* end of deals **************************/
